--- a/app/src/main/res/layout/image_item.xml
+++ b/app/src/main/res/layout/image_item.xml
@@ -11,7 +11,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:id="@+id/imageViewItem"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"/>
+        android:id="@+id/imageViewItem" />
 </androidx.cardview.widget.CardView>
