--- a/app/src/main/res/layout/activity_full_screen_wallpaper.xml
+++ b/app/src/main/res/layout/activity_full_screen_wallpaper.xml
@@ -1,37 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:background="@android:color/white"
     tools:context=".FullScreenWallpaper">
 
-    <com.github.chrisbanes.photoview.PhotoView
-        android:id="@+id/photoView"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
+        <com.github.chrisbanes.photoview.PhotoView
+            android:id="@+id/photoView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitXY"/>
+
+
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:text="SET Wallpaper"
-        android:id="@+id/btnSetWallpaper"
-        android:layout_alignParentBottom="true"
-        android:background="@color/black"
-        android:onClick="SetWallpaperEvent" />
+        android:layout_marginHorizontal="30dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="30dp"
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/btnDownloadWallpaper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/btnSetWallpaper"
-        android:layout_marginBottom="5dp"
-        android:background="@color/black"
-        android:onClick="DownloadWallpaperEvent"
-        android:padding="10dp"
-        android:text="Download Wallpaper" />
 
-</RelativeLayout>
+        <ImageButton
+            android:id="@+id/btnDownloadWallpaper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/download_icon"
+            android:layout_above="@+id/btnSetWallpaper"
+            android:background="@drawable/circular_button"
+            android:onClick="DownloadWallpaperEvent"
+            android:padding="10dp"
+            android:text="Download Wallpaper"
+            android:layout_marginRight="30dp"
+            android:elevation="20dp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnSetWallpaper"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/button_rounded_corner"
+            android:onClick="SetWallpaperEvent"
+            android:padding="10dp"
+            android:textColor="@color/white"
+            android:text="Set Wallpaper"
+            android:layout_marginLeft="40dp"
+            android:textAllCaps="false"/>
+
+    </LinearLayout>
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
