--- a/app/src/main/res/drawable/button_rounded_corner.xml
+++ b/app/src/main/res/drawable/button_rounded_corner.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#3E8CEA"/>
+    <solid android:color="@color/theme_color"/>
 
     <corners android:radius="20dp"/>
 
