--- a/app/src/main/res/drawable/circular_button.xml
+++ b/app/src/main/res/drawable/circular_button.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="#3E8CEA"/>
+    <solid android:color="@color/theme_color"/>
 </shape>
