--- a/app/src/main/res/layout/activity_full_screen_wallpaper.xml
+++ b/app/src/main/res/layout/activity_full_screen_wallpaper.xml
@@ -8,6 +8,7 @@
     android:background="@android:color/white"
     tools:context=".FullScreenWallpaper">
 
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -19,6 +20,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:indeterminate="true"
+            android:layout_gravity="center"
+            android:indeterminateTint="@color/theme_color"/>
 
         <com.github.chrisbanes.photoview.PhotoView
             android:id="@+id/photoView"
