--- a/app/src/main/res/layout/activity_exit_screen.xml
+++ b/app/src/main/res/layout/activity_exit_screen.xml
@@ -10,19 +10,20 @@
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_outline_cancel_24"
-            android:background="@color/white"/>
+            android:background="@color/white"
+            android:src="@drawable/ic_outline_cancel_24" />
 
     </LinearLayout>
 
