--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,48 +22,50 @@
         android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:cardBackgroundColor="@color/search_back"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="10dp"
+        android:elevation="30dp"
+        android:orientation="horizontal"
+        app:cardCornerRadius="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginVertical="20dp"
-        app:cardCornerRadius="20dp"
-        android:elevation="30dp">
+        app:layout_constraintTop_toBottomOf="@+id/banner_adview">
 
-        <EditText
+        <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/searchET"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:singleLine="true"
+            android:background="@drawable/edit_search_bg"
+            android:backgroundTint="@color/search_back"
+            android:textCursorDrawable="@drawable/black_cursor"
+            android:hint="Search category e.g food, texture etc"
             android:imeOptions="actionSearch"
             android:paddingHorizontal="20dp"
-            android:background="@drawable/edit_search_bg"
-            android:hint="Search category e.g food, texture etc" />
+            android:singleLine="true" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="right"
-            android:background="@color/white">
+            android:background="@color/search_back"
+            android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_search_24"
-                android:backgroundTint="@color/white"
-                android:onClick="searchBtnEvent"/>
+                android:backgroundTint="@color/search_back"
+                android:onClick="searchBtnEvent"
+                android:src="@drawable/ic_baseline_search_24" />
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_refresh_24"
                 android:layout_gravity="right"
-                android:backgroundTint="@color/white"
-                android:onClick="refreshBtnEvent" />
+                android:backgroundTint="@color/search_back"
+                android:onClick="refreshBtnEvent"
+                android:src="@drawable/ic_baseline_refresh_24" />
         </LinearLayout>
-
 
 
     </androidx.cardview.widget.CardView>
@@ -72,6 +74,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
@@ -79,12 +82,27 @@
         android:id="@+id/banner_adview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        app:adSize="BANNER"
+        app:adSize="FULL_BANNER"
         app:adUnitId="@string/banner_unit_id"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.etebarian.meowbottomnavigation.MeowBottomNavigation
+        android:id="@+id/bnv_Main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_weight="1"
+        app:mbn_backgroundBottomColor="@color/theme_color"
+        app:mbn_circleColor="@color/theme_color"
+        app:mbn_countBackgroundColor="@color/theme_color"
+        app:mbn_countTextColor="#ffffff"
+        app:mbn_defaultIconColor="@color/white"
+        app:mbn_rippleColor="#2f424242"
+        app:mbn_selectedIconColor="@color/white"
+        app:mbn_shadowColor="#1f212121" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
